refactor: removed model and changed tests for modularity